Trying to fix spacing, also changing more values out for variables.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,7 +8,7 @@
 
 @keyframes typing {
 	0% {width: 0%}
-	100% {width: 100%}
+	100% {width: 90vw}
 }
 
 @keyframes blink-caret {
@@ -28,6 +28,7 @@
 :root {
 	--intro-text-length: 43; /* Text is the string "Welcome to Centennial Chess Club's website!" which has 43 chars*/
 	--default-rounding: 20px;
+    --main-rounding: 50px;
 }
 
 
@@ -57,12 +58,12 @@ a:hover {
 .on_background {
 	background-color: rgba(0, 0, 0, 0.8);
 	min-height: 98vh;
-	border-radius: 50px;
-	padding: 30px;
+	border-radius: var(--main-rounding);
+	padding: calc(var(--main-rounding) - var(--default-rounding));
 }
 
 .content {
-	padding-left: 20px;
+	padding-left: var(--default-rounding);
 }
 
 
@@ -81,7 +82,7 @@ a:hover {
 /* Note this width is relative to td element - not entire page */
 .content_table tr td img {
 	width: 100%;
-	border-radius: 20px;
+	border-radius: var(--default-rounding);
 	
 	transition: box-shadow 0.2s linear;
 
@@ -96,7 +97,7 @@ a:hover {
 	font-size: 25px;
 	padding: 20px;
 	background-color: rgba(0, 0, 0, 0.2);
-	border-radius: 20px;
+	border-radius: var(--default-rounding);
 	
 	transition: box-shadow 0.2s linear;
 
@@ -121,7 +122,7 @@ a:hover {
 			   blink-caret 1s step-end infinite;
 	
 	text-align: left;
-	font-size: calc(100% / 1.15 / var(--intro-text-length));
+	font-size: calc(90vw / 1.15 / var(--intro-text-length));
 	color: orange;
 	border-right: .15em solid white;
 }
@@ -156,7 +157,7 @@ a:hover {
 .website_header {
 	border-spacing: 0px;
 	padding: 10px;
-	border-radius: 20px;
+	border-radius: var(--default-rounding);
 	max-height: 60px;
 	background-image: url("https://bpb-ca-c1.wpmucdn.com/mycentennial.sd43.bc.ca/dist/f/2812/files/2023/01/dots-6297146_1920.jpg");
 	display: block;
